Bug 1477831 - Merge items in FLBDisplayItemIterator r=mattwoodrow

MozReview-Commit-ID: AWxVue3tjN1